Fixed logo position on mobile
The logo position was not where I wanted it on mobile devices so I moved it to where i wanted it.

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,6 +1,6 @@
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -20,29 +20,29 @@ body {
 
 .pageheaderitm {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 200px;
-          flex: 0 1 200px;
+  -ms-flex: 0 1 200px;
+  flex: 0 1 200px;
 }
 
 .pageheaderitm:last-child {
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   text-align: right;
 }
 
 .logo {
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
   border-radius: 10%;
 }
 
 .logo:hover {
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
-          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
+  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
   -webkit-transition-duration: 0.2s;
-       -o-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
 }
 
 .navlist,
@@ -68,6 +68,11 @@ body {
 }
 
 @media all and (max-width: 440px) {
+  .logo {
+    position: relative;
+    top: 25px;
+  }
+
   .profilepic {
     float: none;
     position: relative;
@@ -81,18 +86,18 @@ body {
 
 .profilepic {
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
 }
 
 .profilepic1 {
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
 }
 
 .profiletext {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 100px;
-          flex: 1 1 100px;
+  -ms-flex: 1 1 100px;
+  flex: 1 1 100px;
 }
 
 h1 {
@@ -152,8 +157,8 @@ a:focus {
   text-decoration: none;
   opacity: 0.9;
   -webkit-transition-duration: 0.2s;
-       -o-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
 }
 
 .send {
@@ -173,8 +178,8 @@ a:focus {
   cursor: pointer;
   opacity: 0.8;
   -webkit-transition-duration: 0.2s;
-       -o-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
 }
 
 input {
@@ -206,7 +211,7 @@ ul {
   background-color: #40bfa1;
   padding: 10px;
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
   border-radius: 30px;
 }
 
@@ -334,7 +339,7 @@ button {
   padding: 10px;
   border-radius: 3px;
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
 }
 
 .button {
@@ -349,7 +354,7 @@ button {
   padding: 10px;
   border-radius: 3px;
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
 }
 
 button:hover,
@@ -357,10 +362,10 @@ button:focus,
 .button:hover,
 .button:focus {
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
-          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
+  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
   -webkit-transition-duration: 0.2s;
-       -o-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
 }
 
 .raincloud {
@@ -369,7 +374,7 @@ button:focus,
   margin-right: auto;
   margin-bottom: none;
   -webkit-animation: 1s cloud infinite alternate linear;
-          animation: 1s cloud infinite alternate linear;
+  animation: 1s cloud infinite alternate linear;
 }
 
 .seattle {
@@ -383,24 +388,24 @@ button:focus,
 @-webkit-keyframes cloud {
   from {
     -webkit-transform: translate(230px, 40px);
-            transform: translate(230px, 40px);
+    transform: translate(230px, 40px);
   }
 
   to {
     -webkit-transform: translate(230px, 40px);
-            transform: translate(230px, 40px);
+    transform: translate(230px, 40px);
   }
 }
 
 @keyframes cloud {
   from {
     -webkit-transform: translate(230px, 40px);
-            transform: translate(230px, 40px);
+    transform: translate(230px, 40px);
   }
 
   to {
     -webkit-transform: translate(230px, 40px);
-            transform: translate(230px, 40px);
+    transform: translate(230px, 40px);
   }
 }
 
@@ -450,12 +455,12 @@ button:focus,
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   text-align: center;
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 100px;
-          flex: 1 1 100px;
+  -ms-flex: 1 1 100px;
+  flex: 1 1 100px;
 }
 
 .aboutfooter {
@@ -484,7 +489,7 @@ button:focus,
 
 .rainb {
   -webkit-animation: 0.3s rainb infinite linear;
-          animation: 0.3s rainb infinite linear;
+  animation: 0.3s rainb infinite linear;
 }
 
 .email,
